Updated first post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   <div class="footer">
     <div class="contact">
       <p>
-        Gary Hodgson
+        Contact: <a href="mailto:contact@garyhodgson.com">Gary Hodgson</a<>
       </p>
     </div>
     <div class="rss">
