updated contact info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,10 @@
   <div class="footer">
     <div class="contact">
       <p>
-        Contact: <a href="mailto:contact@garyhodgson.com">Gary Hodgson</a<>
+    	<a href="mailto:contact@garyhodgson.com">Email</a>
+      </p>
+      <p>
+        <a href="http://twitter.com/garyhodgson">Twitter</a>
       </p>
     </div>
     <div class="rss">
