updated feedburner links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Gary Hodgson" />
-   <!--<link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
--->
+   <link href="http://feeds.feedburner.com/garyhodgson-github" rel="alternate" title="garyhodgson.github.com" type="application/atom+xml" />
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 </head>
@@ -30,7 +29,7 @@
       </p>
     </div>
     <div class="rss">
-      <a href="http://feeds.feedburner.com">
+      <a href="http://feeds.feedburner.com/garyhodgson-github">
         <img src="/images/rss.png" alt="RSS Feed" />
       </a>
 
