updated contact links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,7 @@
   <div class="footer">
     <div class="contact">
       <p>
-    	<a href="mailto:contact@garyhodgson.com">Email</a>
-      </p>
-      <p>
-        <a href="http://twitter.com/garyhodgson">Twitter</a>
+    	<a href="mailto:contact@garyhodgson.com">Email</a> : <a href="http://twitter.com/garyhodgson">Twitter</a>
       </p>
     </div>
     <div class="rss">
