added twitter list; updated css a little.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
@@ -9,6 +8,7 @@
    <link href="http://feeds.feedburner.com/garyhodgson-github" rel="alternate" title="garyhodgson.github.com" type="application/atom+xml" />
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+   <script src="js/twitter.js"></script>
 </head>
 <body>
 
@@ -18,8 +18,7 @@
   </div>
   
   {{ content }}
-  
-  <hr>
+
   <div class="footer">
     <div class="contact">
       <p>
