--- a/css/screen.css
+++ b/css/screen.css
@@ -62,13 +62,8 @@ ul.posts {
   margin-bottom: 2em;
 }
 
-  ul.posts li {
-    line-height: 1.75em;
-  }
-
-  ul.posts span {
+  ul.posts .time {
     color: #aaa;
-    font-family: Monaco, "Courier New", monospace;
     font-size: 80%;
   }
 
