--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,12 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Gary Hodgson" />
+   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
    <link href="http://feeds.feedburner.com/garyhodgson-github" rel="alternate" title="garyhodgson.github.com" type="application/atom+xml" />
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
    <script src="js/twitter.js"></script>
+  
 </head>
 <body>
 
