a few css changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,26 +14,29 @@
 </head>
 <body>
 
-<div class="site">
-  <div class="title">
-    <a href="/">garyhodgson.github.com</a>
-  </div>
-  
-  {{ content }}
-
-  <div class="footer">
-    <div class="contact">
-      <p>
-    	<a href="mailto:contact@garyhodgson.com">Email</a> : <a href="http://twitter.com/garyhodgson">Twitter</a>
-      </p>
-    </div>
-    <div class="rss">
-      <a href="http://feeds.feedburner.com/garyhodgson-github">
-        <img src="/images/rss.png" alt="RSS Feed" />
-      </a>
-
-    </div>
-  </div>
+<div class="backgroundimage">
+	<div class="site">
+	  <div class="title">
+	    <a href="/">garyhodgson.github.com</a>
+	  </div>
+	  	
+	  {{ content }}
+	
+	  <div class="footer">
+	    <div class="contact">
+	      <a href="mailto:contact@garyhodgson.com">
+	        <img src="/images/email.png" alt="Email" />
+	      </a>
+	      <a href="http://twitter.com/garyhodgson">
+	        <img src="/images/twitter.png" alt="Twitter" />
+	      </a>
+	      <a href="http://feeds.feedburner.com/garyhodgson-github">
+	        <img src="/images/rss.png" alt="RSS" />
+	      </a>
+	
+	    </div>
+	  </div>
+	</div>
 </div>
 
 </body>
