--- a/css/screen.css
+++ b/css/screen.css
@@ -17,7 +17,7 @@ html, body {
 
 body {
   background-color: white;
-  font: 13.34px helvetica, arial, clean, sans-serif;
+  font: 12.34px Arial,  sans-serif;
   *font-size: small;
   text-align: center;
 }
@@ -35,16 +35,22 @@ p {
 }
 
 a {
-  color: #00a;
+	color: #a00;
+	text-decoration:none;
+	padding: .5em;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-khtml-border-radius: 5px;
+	border-radius: 5px;   
 }
-
-a:hover {
-  color: black;
-}
-
+    
 a:visited {
-  color: #a0a;
+  color: #a00;
 }
+
+a:hover {  
+	background: rgba(164, 173, 183, .15);  
+}  
 
 table {
   font-size: inherit;
@@ -59,13 +65,28 @@ table {
 
 ul.posts {
   list-style-type: none;
+  width: 27em;
   margin-bottom: 2em;
 }
 
-  ul.posts .time {
+ul.commands {
+  list-style-type: none;
+  width: 27em;
+  margin-bottom: 2em;
+  margin-left: -5px;
+}    
+
+ul.tweets {
+  list-style-type: none;
+  width: 40em;
+  margin-bottom: 2em;
+}
+
+  ul .time {
     color: #aaa;
     font-size: 80%;
   }
+
 
 /*****************************************************************************/
 /*
@@ -73,9 +94,16 @@ ul.posts {
 /*
 /*****************************************************************************/
 
+.backgroundimage {
+	border: 1px solid white;
+	width: 60em;
+	margin: 0 auto 0 auto;
+	background: white url('/images/strawberry.jpg') no-repeat top right;
+}
+
 .site {
   font-size: 110%;
-  text-align: justify;
+  text-align: left;
   width: 40em;
   margin: 3em auto 2em auto;
   line-height: 1.5em;
@@ -90,6 +118,7 @@ ul.posts {
   .site .title a {
     color: #a00;
     text-decoration: none;
+    margin-left: -5px;
   }
 
   .site .title a:hover {
@@ -117,24 +146,19 @@ ul.posts {
     margin-top: 2em;
     overflow: hidden;
   }
-
+  
     .site .footer .contact {
-      float: left;
-      margin-right: 3em;
-    }
-
-      .site .footer .contact a {
-        color: #8085C1;
-      }
-
-    .site .footer .rss {
       margin-top: 1.1em;
       margin-right: -.2em;
       float: right;
     }
 
-      .site .footer .rss img {
+      .site .footer .contact img {
         border: 0;
+      }
+      
+	.site .footer .contact a:hover {
+        background: white;
       }
 
 /*****************************************************************************/
@@ -144,7 +168,8 @@ ul.posts {
 /*****************************************************************************/
 
 #post {
-
+	min-height: 400px;
+	width: 27em;
 }
 
   /* standard */
