Modified layout slightly; added posts page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,5 +2,8 @@
 layout: default
 ---
 <div id="post">
-{{ content }}
+{{ content }} 
+</div>
+<div class="navigation">
+	<a href="/posts.html">More Posts</a>
 </div>
