--- a/css/screen.css
+++ b/css/screen.css
@@ -37,6 +37,7 @@ p {
 a {
 	color: #a00;
 	text-decoration:none;
+	outline: none;
 }
     
 a:visited {
@@ -69,7 +70,7 @@ ul.posts {
 		-webkit-border-radius: 5px;
 		-moz-border-radius: 5px;
 		-khtml-border-radius: 5px;
-		border-radius: 5px;   
+		border-radius: 5px;
 	}
 
 ul.commands {
@@ -129,7 +130,7 @@ ul .time {
   .site .title a {
     color: #a00;
     text-decoration: none;
-    margin-left: -5px;
+    margin-left: -.5em;
 	padding: .5em;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -182,6 +183,22 @@ ul .time {
 /* Posts
 /*
 /*****************************************************************************/
+
+#posts {
+	min-height: 400px;
+	width: 27em;
+}
+
+.navigation a {
+	color: #a00;
+    text-decoration: none;
+    margin-left: -.5em;
+	padding: .5em;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-khtml-border-radius: 5px;
+	border-radius: 5px;   
+}
 
 #post {
 	min-height: 400px;
