--- a/css/screen.css
+++ b/css/screen.css
@@ -65,6 +65,10 @@ ul.posts {
   margin-bottom: 2em;
 }
 
+	ul.posts li{
+	  margin-bottom: 0.5em;
+	}
+
 	ul.posts a {
 		padding: .5em;
 		-webkit-border-radius: 5px;
@@ -184,8 +188,8 @@ ul .time {
 /*
 /*****************************************************************************/
 
-#posts {
-	min-height: 400px;
+.posts {
+	min-height: 250px;
 	width: 27em;
 }
 
@@ -200,44 +204,50 @@ ul .time {
 	border-radius: 5px;   
 }
 
-#post {
+.post {
 	min-height: 400px;
 	width: 27em;
 }
 
   /* standard */
 
-  #post pre {
-    border: 1px solid #ddd;
+  .post pre {
+  	border: 1px solid #ddd;
     background-color: #eef;
     padding: 0 .4em;
   }
 
-  #post ul,
-  #post ol {
+  .post ul,
+  .post ol {
     margin-left: 1.25em;
   }
 
-  #post code {
+  .post code {
     border: 1px solid #ddd;
     background-color: #eef;
     font-size: 95%;
     padding: 0 .2em;
   }
 
-    #post pre code {
+    .post pre code {
       border: none;
     }
 
   /* terminal */
 
-  #post pre.terminal {
+  .post pre.terminal {
     border: 1px solid black;
     background-color: #333;
     color: white;
   }
+  
+  .post pre.white {
+    border: 0px solid black;
+    background-color: #fff;
+    color: red;
+  }
 
-  #post pre.terminal code {
+  .post pre.terminal code {
     background-color: #333;
   }
 
